# deskclock

./: .gitignore  Cargo.toml  README.md  release.sh
.cargo/: config.toml
src/: date_ext.rs  google.rs  main.rs  oauth_browser_delegate.rs
