cargo-features = ["codegen-backend"]
[package]
name = "deskclock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
eframe = { version = "0.27.2", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "x11",
  "glow",
] }
env_logger = { version = "0.11.3", default-features = false, features = [
  "auto-color",
  "humantime",
] }
google-calendar3 = "5.0.4"
hyper = "1.3.1"
hyper-rustls = "0.27.1"
log = "0.4.21"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt"] }
webbrowser = "1.0.0"


[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]

[profile.dev]
debug = 0
# codegen-backend = "cranelift"
# [profile.release]
# opt-level = 0
# strip = "none"
# lto = false
# codegen-units = 256
# panic = "abort"
# debug = 0
# codegen-backend = "cranelift"
# embedded-graphics = "0.8.1"
# embedded-hal = "1.0.0"
# epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }
# linux-embedded-hal = "0.4.0"
# rppal = { version = "0.17.1", features = ["hal"] }
